# Rust-Poll-app

./: Cargo.toml  README.md  setup.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: LandingPage.js  Login.js  Navbar.js  PollDetail.js  PollForm.js  PollItem.js  PollList.js  PollResults.js  Register.js
frontend/src/styles/: index.css
migrations/: 20250624155825_user.sql  20250809073604_poll.sql
src/: main.rs
src/models/: login.rs  mod.rs  poll.rs  register.rs
