[package]
name = "Poll_app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web="4"
actix-rt="1.0"
actix-cors="0.6"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
argon2 = "0.5"
rand = "0.8"

# For JWT authentication and claims
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"


